# dos

./: Cargo.toml  arm_64_os.json  kernel8.img  linker.ld  virt.dtb
.cargo/: config.toml
scripts/: run.ps1
src/: boot.rs  main.rs
src/kernel/: mod.rs
