[package]
name = "DOS"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = "0.5.2"
volatile = "0.6.1"
uart_16550 = "0.2.0"
aarch64-cpu = "9.3.0"
[[bin]]
name = "DOS"
test = false
bench = false
path = "src/main.rs"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

